[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "rasa_audiocodes"
version = "1.0.0"
authors = [{name = "AudioCodes Ltd.", email = "yaakov.bivas@audiocodes.com"}]
description = "Integrate Rasa with AudioCodes VoiceAI Connect"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = ["rasa-sdk>=1.3.2"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/ac-voice-ai/rasa-audiocodes"
"Bug Reports" = "https://github.com/ac-voice-ai/rasa-audiocodes/issues"
Source = "https://github.com/ac-voice-ai/rasa-audiocodes"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = false}
